# dtlBoard-web-django

./: db.sqlite3  index.html  pyproject.toml
accounts/: forms.py  urls.py  views.py
accounts/templates/registration/: login.html  logout.html  register.html  register_done.html
config/: settings.py  urls.py
css/: main.css
js/: script_main.js
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/static/posts/css/: about.scss  contents.scss  footer.scss  header.scss  introduce.scss  journal.scss  list.scss  main.css  main1.scss  sectors.scss  synopsis.scss
posts/static/posts/js/: script_main.js
posts/templates/: base.html
posts/templates/posts/: delete.html  detail.html  index.html  list.html  update.html  upload.html
static/posts/css/: main.css  main.css.map  main1.css  main1.css.map  main2.css  main2.css.map
