[tool.poetry]
name = "dtlboard-web-django"
version = "0.1.0"
description = ""
authors = ["yesaroun <akor1@naver.com>"]
readme = "README.md"
packages = [{include = "dtlboard_web_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
pillow = "^9.4.0"
django-disqus = "^0.5"
six = "^1.16.0"
django-compressor = "^4.3.1"
django-sass-processor = "^1.2.2"
django-libsass = "^0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
